# sdl2_project_template

./: CMakeLists.txt  README.md  main.cpp
